corrected author name

--- a/Singularity.1.2
+++ b/Singularity.1.2
@@ -5,7 +5,7 @@ From: continuumio/miniconda3:4.9.2
 "LongQC v1.2 image"
 
 %labels
-MAINTAINER "Guillermo Piccoli <grpiccoli@gmail.com>"
+MAINTAINER "Guillermo R. Piccoli <grpiccoli@gmail.com>"
 
 %post
 BIN=/usr/local/bin
