--- a/Singularity.1.2
+++ b/Singularity.1.2
@@ -22,21 +22,14 @@ apt-get clean
 apt-get purge
 
 wget -qO- https://github.com/yfukasawa/LongQC/archive/refs/tags/1.2.0b.tar.gz | tar zxvf -
-cd LongQC-1.2.0b
-sed -i '1s;^;#!/opt/conda/bin/python3.8\n;' longQC.py
-cp -r * $BIN/
-cd minimap2-coverage
-make
-rm -rf $BIN/minimap2-coverage
-cp minimap2-coverage $BIN/
-cd
-rm -rf LongQC-1.2.0b
-cd $BIN
-ln -s longQC.py longqc
-chmod +x *
+cd LongQC-1.2.0b/minimap2-coverage && \
+make && \
+cd && \
+mv LongQC-1.2.0b/* $BIN
 
 conda install -y \
-numpy=1.19.2 \
+python=3.9 \
+numpy=1.20.1 \
 pandas=1.2.4 \
 scipy=1.6.2 \
 jinja2=2.11.3 \
@@ -44,6 +37,11 @@ h5py=2.10.0 \
 matplotlib=3.3.4 \
 scikit-learn=0.24.1
 
-pip install \
-pysam==0.16.0.1 \
-edlib==1.3.8.post2
+conda config --add channels defaults && \
+conda config --add channels conda-forge && \
+conda config --add channels bioconda
+
+conda install -y -c bioconda \
+edlib=1.2.3 \
+pysam=0.16.0.1 \
+python-edlib=1.3.8.post2
